# workout-manager

./: .claudeignore  .env.example  CONTEXT.md  LICENSE  README.md  docker-compose.yml
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/app/: config.py  envelope.py  main.py
apps/api/app/adoption/: service.py
apps/api/app/alembic/: env.py  script.py.mako
apps/api/app/auth/: dependencies.py  jwks.py  jwks_provider.py
apps/api/app/db/: models.py  session.py
apps/api/tests/: conftest.py  fake_llm.py  test_adoption.py  test_config.py  test_envelope.py  test_exercise_domain.py  test_exercise_endpoint.py  test_exercise_progress.py  test_exercise_progress_endpoint.py  test_exercise_relationship_repository.py  test_exercise_repository.py  test_feedback_domain.py  test_generation.py  test_generation_cache.py  test_generation_feedback_repository.py  test_generation_service.py  test_google_provider.py  test_job_queue.py  test_jwks.py  test_jwks_provider.py  test_level_folding.py  test_llm_factory.py  test_llm_provider.py  test_logbook_service.py  test_logged_session_repository.py  test_logs_endpoint.py  test_metric_entry_repository.py  test_metrics_endpoint.py  test_openai_provider.py  test_openrouter_provider.py  test_orchestrator.py  test_profile_domain.py  test_profile_endpoint.py  test_profile_repository.py  test_program_endpoint.py  test_program_generation.py  test_program_generation_caching.py  test_program_progress.py  test_program_progression_view.py  test_program_repository.py  (+10 more)
(+115 files in other folders)
