[project]
name = "workout-manager-api"
version = "0.1.0"
description = "Workout Manager FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "redis>=5.1",
    "rq>=2.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "cryptography>=43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "app/db/session.py",
    "app/alembic/*",
    "app/main.py",
    "app/generation/worker.py",
]
